Bug 167512 - Numbering wrong after saving RTF
Summary: Numbering wrong after saving RTF
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.0.0.3 release
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:26.2.0 target:25.8.1
Keywords: bibisected, bisected, filter:rtf
Depends on:
Blocks: RTF-Bullet-Number-Lists
  Show dependency treegraph
 
Reported: 2025-07-15 08:51 UTC by Timur
Modified: 2025-08-11 10:11 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Sample RTF (52.50 KB, text/rtf)
2025-07-15 08:51 UTC, Timur
Details
Sample compared in MSO, after open, after save (6.78 KB, image/jpeg)
2025-07-15 08:53 UTC, Timur
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Timur 2025-07-15 08:51:13 UTC
Created attachment 201804 [details]
Sample RTF

Save sample RTF and reopen, see numbering wrong. 

Never was good, last changed in 6.0 with:

commit 697359f63e392a73fe3c34635819706a93e5c6b1	[log]
author	Miklos Vajna <vmiklos@collabora.co.uk>	Mon Jan 29 22:01:54 2018 +0100
committer	Caolán McNamara <caolanm@redhat.com>	Tue Jan 30 11:14:33 2018 +0100
tdf#115155 RTF import: fix left indent handling inside list definition
Comment 1 Timur 2025-07-15 08:53:04 UTC
Created attachment 201805 [details]
Sample compared in MSO, after open, after save
Comment 2 Mike Kaganski 2025-07-15 14:09:43 UTC
https://gerrit.libreoffice.org/c/core/+/187920
Comment 3 Commit Notification 2025-07-15 19:17:12 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/11bdec0424605a61e1135080bae8719c9e8a1f92

tdf#167512: don't avoid resetting paragraphs' properties in fly

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2025-08-11 10:11:20 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/73e319b84a6c1ff7c4255aac5fcb1aa20f487196

tdf#167512: don't avoid resetting paragraphs' properties in fly

It will be available in 25.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.