tdf#167512: don't avoid resetting paragraphs' properties in fly

Commit 5bbc027d5dae3472223538b13933ff821e027737 (cws-vmiklos01.diff:
Better RTF export filter, 2010-09-17) introduced RtfAttributeOutput
and its StartParagraphProperties, where output of \pard\plain was
skipped when in fly. The reason likely was, that at that time, text
boxes were output using an "old-style" method, where text box was
purely a paragraph-level formatting. This created a problem: list
settings weren't reset for following paragraphs, so lists continued
incorrectly.

Commit d53dd70b15f0e3f7c8a05a93f8fcd70e1147c1f7 (sw: rework RTF
export of text frames, 2013-04-12) reimplemented text box export to
use a "new-style" frames (using \shp ... \shptxt markup). This made
it possible to restore resetting of paragraph properties, without
breaking text boxes. This is done here.

Change-Id: Idaabece2a658845906463c942aad45a142f87633
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/187920
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/187933
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/188024